--- a/angular-dashboard/src/app/tabs/tabs.component.html
+++ b/angular-dashboard/src/app/tabs/tabs.component.html
@@ -1,19 +1,19 @@
 <div class="tabs">
-    <div class="tab bookmark-tab">
+    <a routerLink="bookmarks" routerLinkActive="selected" class="tab bookmark-tab">
         <div class="tab-tile">
             <i class="material-icons-outlined">bookmarks</i>
         </div>
-    </div>
+    </a>
 
-    <div class="tab todo-tab">
+    <a routerLink="todos" routerLinkActive="selected" class="tab todo-tab">
         <div class="tab-tile">
             <i class="material-icons-outlined">check</i>
         </div>
-    </div>
+    </a>
 
-    <div class="tab notes-tab">
+    <a routerLink="notes" routerLinkActive="selected" class="tab notes-tab">
         <div class="tab-tile">
             <i class="material-icons-outlined">notes</i>
         </div>
-    </div>
+    </a>
 </div>
