--- a/angular-dashboard/src/app/tabs/tabs.component.scss
+++ b/angular-dashboard/src/app/tabs/tabs.component.scss
@@ -11,6 +11,7 @@
 
 .tab {
     position: relative;
+    text-decoration: none;
     z-index: 1;
 }
 
@@ -19,8 +20,15 @@
     padding: 18px;
 
     cursor: pointer;
+    transition: all 0.2s;
 
 }
+
+.tab.selected .tab-tile {
+    transform: translateY(-20px);
+}
+// styles for tab-tile background 
+
 .tab-tile::before {
     content: '';
     position:absolute;
@@ -51,4 +59,24 @@
 
 .tab-tile:hover::before {
     transform:scale(1.2);
+    opacity: 1;
 }
+
+// End of tab-tile background
+
+// styles for underline effect
+.tab::before {
+    content: '';
+    position: absolute;
+    left:0;
+    right:0;
+    bottom: -10px;
+   
+    height: 3px;
+    width: 50%;
+    
+    margin:auto;
+    background-color: rgba(white, 0.85);
+}
+
+
